--- a/ImageProcessingTool.vcxproj.filters
+++ b/ImageProcessingTool.vcxproj.filters
@@ -58,6 +58,9 @@
     <ClCompile Include="BaseImage.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="ImageFilter.cpp" />
+    <ClCompile Include="PointDistribution.cpp" />
+    <ClCompile Include="PointConnection.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="src">
@@ -152,6 +155,9 @@
     <ClInclude Include="BaseImage.h">
       <Filter>src</Filter>
     </ClInclude>
+    <ClInclude Include="ImageFilter.h" />
+    <ClInclude Include="PointDistribution.h" />
+    <ClInclude Include="PointConnection.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="icon.rc" />
