--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 # but not the data folder
 ###########################
 
+/bin/
 */bin/*
 !*/bin/data/
 
@@ -79,3 +80,17 @@ Desktop.ini
 
 # Android
 .csettings
+
+# Random 
+
+.cache
+addons/*
+obj/
+icon.rc
+config.make
+compile_commands.json
+Makefile
+ImageProcessingTool.qbs
+.vscode/
+.vs/
+*.vcxproj*
